@@ -1,3 +1,8 @@
+2011-12-19  MIYAMUKO Katsuyuki
+
+	* (parse-raw-header): Foo:Bar というセパレータ後に空白を含まない形式の
+	ヘッダを解析できていなかったのを修正
+
 2011-11-20  MIYAMUKO Katsuyuki
 
 	* xml-http-request 1.3.0 released!
